dish APIを実装
